[package]
name = "pentheus"
version = "0.1.1"
authors = ["Clivern <hello@clivern.com>"]
edition = "2021"
description = "Your Database Guardian, Set up in Minutes"
license = "MIT"
repository = "https://github.com/Clivern/Pentheus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.23"
home = "0.5.11"
inquire = "0.7.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_with = "3.12.0"
toml = "0.8.19"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
